{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 48,
  "lineage": "29173eb8-ea77-0d47-ac3f-d1f0636dd0b7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085bc53e571540345",
            "arn": "arn:aws:ec2:us-east-1:987946798550:elastic-ip/eipalloc-085bc53e571540345",
            "association_id": "eipassoc-00b55279f66bd3794",
            "domain": "vpc",
            "id": "eipalloc-085bc53e571540345",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fcbba9657bc49f62",
            "private_dns": "ip-10-0-1-91.ec2.internal",
            "private_ip": "10.0.1.91",
            "public_dns": "ec2-98-85-165-96.compute-1.amazonaws.com",
            "public_ip": "98.85.165.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eks-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-eip-1",
              "Project": "my-eks"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5f8c7022796efa1",
            "arn": "arn:aws:ec2:us-east-1:987946798550:elastic-ip/eipalloc-0f5f8c7022796efa1",
            "association_id": "eipassoc-03590c7a09c5312a6",
            "domain": "vpc",
            "id": "eipalloc-0f5f8c7022796efa1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ba24145edbb8da90",
            "private_dns": "ip-10-0-2-82.ec2.internal",
            "private_ip": "10.0.2.82",
            "public_dns": "ec2-3-233-254-69.compute-1.amazonaws.com",
            "public_ip": "3.233.254.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eks-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-eip-2",
              "Project": "my-eks"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:internet-gateway/igw-0051ab9dd19d2a796",
            "id": "igw-0051ab9dd19d2a796",
            "owner_id": "987946798550",
            "tags": {
              "Name": "my-eks-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-igw",
              "Project": "my-eks"
            },
            "vpc_id": "vpc-0c45309849d4c33d1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085bc53e571540345",
            "association_id": "eipassoc-00b55279f66bd3794",
            "connectivity_type": "public",
            "id": "nat-0343f9a906abe9a8a",
            "network_interface_id": "eni-0fcbba9657bc49f62",
            "private_ip": "10.0.1.91",
            "public_ip": "98.85.165.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00586cb12e682275c",
            "tags": {
              "Name": "my-eks-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-nat-1",
              "Project": "my-eks"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5f8c7022796efa1",
            "association_id": "eipassoc-03590c7a09c5312a6",
            "connectivity_type": "public",
            "id": "nat-07965bcad6e1fa4bd",
            "network_interface_id": "eni-0ba24145edbb8da90",
            "private_ip": "10.0.2.82",
            "public_ip": "3.233.254.69",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-020958384a5920372",
            "tags": {
              "Name": "my-eks-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-nat-2",
              "Project": "my-eks"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:route-table/rtb-0c95fb40a1cb77baa",
            "id": "rtb-0c95fb40a1cb77baa",
            "owner_id": "987946798550",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0343f9a906abe9a8a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-private-rt-1",
              "Project": "my-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c45309849d4c33d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:route-table/rtb-0730c9e600a0a01ee",
            "id": "rtb-0730c9e600a0a01ee",
            "owner_id": "987946798550",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07965bcad6e1fa4bd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-private-rt-2",
              "Project": "my-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c45309849d4c33d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:route-table/rtb-0236381efb2db79e7",
            "id": "rtb-0236381efb2db79e7",
            "owner_id": "987946798550",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0051ab9dd19d2a796",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-public-rt",
              "Project": "my-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c45309849d4c33d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041621c68dc6ff80f",
            "route_table_id": "rtb-0c95fb40a1cb77baa",
            "subnet_id": "subnet-0400dc62fef6d0a59"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ec8aa8d7d65eaf0",
            "route_table_id": "rtb-0730c9e600a0a01ee",
            "subnet_id": "subnet-09fd793c78c1e26e1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfdda843f53d0659",
            "route_table_id": "rtb-0236381efb2db79e7",
            "subnet_id": "subnet-00586cb12e682275c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038c81d9bf41f017c",
            "route_table_id": "rtb-0236381efb2db79e7",
            "subnet_id": "subnet-020958384a5920372"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:security-group/sg-08328c45e1cde6f6b",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08328c45e1cde6f6b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with cluster",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03eb49c8fd3d70df0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster-2026090411214705620000000d",
            "name_prefix": "eks-cluster-",
            "owner_id": "987946798550",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-eks-cluster-sg",
              "Project": "my-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c45309849d4c33d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:security-group/sg-03eb49c8fd3d70df0",
            "description": "Security group for EKS node groups",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03eb49c8fd3d70df0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster to communicate with nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08328c45e1cde6f6b"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow kubelet API communication",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08328c45e1cde6f6b"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "eks-node-2026090411214705660000000e",
            "name_prefix": "eks-node-",
            "owner_id": "987946798550",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-eks-node-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-eks-node-sg",
              "Project": "my-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c45309849d4c33d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:subnet/subnet-0400dc62fef6d0a59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0400dc62fef6d0a59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987946798550",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-private-1",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-private-1",
              "Project": "my-eks",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c45309849d4c33d1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:subnet/subnet-09fd793c78c1e26e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fd793c78c1e26e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987946798550",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-private-2",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-private-2",
              "Project": "my-eks",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c45309849d4c33d1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:subnet/subnet-00586cb12e682275c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00586cb12e682275c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987946798550",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-public-1",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-public-1",
              "Project": "my-eks",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c45309849d4c33d1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:subnet/subnet-020958384a5920372",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020958384a5920372",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987946798550",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-public-2",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-public-2",
              "Project": "my-eks",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c45309849d4c33d1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:vpc/vpc-0c45309849d4c33d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e253cd71c308c94",
            "default_route_table_id": "rtb-04863cec4e6eaa0ef",
            "default_security_group_id": "sg-0d08dd002a24c6811",
            "dhcp_options_id": "dopt-06f888d796f5ca7af",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c45309849d4c33d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04863cec4e6eaa0ef",
            "owner_id": "987946798550",
            "tags": {
              "Name": "my-eks-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-vpc",
              "Project": "my-eks"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "eks_cluster_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:security-group-rule/sgr-04c16d686ed774821",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-04c16d686ed774821",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08328c45e1cde6f6b",
            "security_group_rule_id": "sgr-04c16d686ed774821",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "my-eks"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "node_group_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:security-group-rule/sgr-0837453989ec8c885",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0837453989ec8c885",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03eb49c8fd3d70df0",
            "security_group_rule_id": "sgr-0837453989ec8c885",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "my-eks"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "eks_cluster_from_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:security-group-rule/sgr-0f8f33eb074ab8bb7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow nodes to communicate with cluster",
            "from_port": 443,
            "id": "sgr-0f8f33eb074ab8bb7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03eb49c8fd3d70df0",
            "security_group_id": "sg-08328c45e1cde6f6b",
            "security_group_rule_id": "sgr-0f8f33eb074ab8bb7",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "my-eks"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.node_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "node_group_from_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:security-group-rule/sgr-09848485a0e435794",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow cluster to communicate with nodes",
            "from_port": 1025,
            "id": "sgr-09848485a0e435794",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-08328c45e1cde6f6b",
            "security_group_id": "sg-03eb49c8fd3d70df0",
            "security_group_rule_id": "sgr-09848485a0e435794",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "my-eks"
            },
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.node_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "node_group_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:security-group-rule/sgr-0060ea38315edbcb1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow kubelet API communication",
            "from_port": 10250,
            "id": "sgr-0060ea38315edbcb1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-08328c45e1cde6f6b",
            "security_group_id": "sg-03eb49c8fd3d70df0",
            "security_group_rule_id": "sgr-0060ea38315edbcb1",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "my-eks"
            },
            "to_port": 10250
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.node_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "node_group_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987946798550:security-group-rule/sgr-0b045806cb91035ff",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgr-0b045806cb91035ff",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03eb49c8fd3d70df0",
            "security_group_id": "sg-03eb49c8fd3d70df0",
            "security_group_rule_id": "sgr-0b045806cb91035ff",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "my-eks"
            },
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node_group",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}